--- a/src/package.json
+++ b/src/package.json
@@ -1,31 +1,31 @@
 {
   "name": "ricky-and-morty",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "author": "Gowsick",
+  "description": "List of characters from Ricky-Marty show",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js",
+    "pack": "webpack -d --config webpack.config.js",
+    "babel": "babel src -d views",
+    "watch": "npm run babel && npm run babel"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
